# Nanite-Tokenizers

./: .gitignore  .todo_hierarchy.json  README.md  README_zhCN.md  capabilities.py  compressor.py  config.py  download.py  exceptions.py  gradio_app.py  locale_context.py  main.py  monitoring.py  pyproject.toml  requirements.txt  settings.yaml  simplier.py  tool_usage.py  web_server.py
.github/agents/: doc-tree-builder.agent.md
agent/: __init__.py  agent.py  chatOpenAIWithReasoning.py  memory.py  skills.py  todo_helper.py  tools.py
easyLib/: CachedLLM.py  CachedSeq2Seq.py
mcp/: client.py
mcp_client/: client.py
rag/: document_doc.py  document_docx.py  document_interface.py  document_pdf.py  document_spreadsheet.py  document_text.py  documents.py  engine.py  keyword_extractor.py  line_profiler_instrument.py  logprob_keyword_extractor.py  ocr.py  pdf_reader.py  preprocessor.py  tfidf_keyword_extractor.py  vector_store.py
rag/resources/: STOPWORDS_SOURCE.md  jieba_stop_words_merged.txt
scripts/: __init__.py  compare_doc_tree_with_main.py  demo_doc_to_sysml.py  sysml_rag_mcp_server.py  test_doc_tree_debug_gui.py  test_logprobs_extract.py  test_search_web_tools.py  test_tools_invocation.py  todo_cli.py
src/nanite_tokenizers/: __init__.py  __main__.py  cli.py  legacy_web_server.py
src/nanite_tokenizers/data/: log_dataset.py
src/nanite_tokenizers/inference/: seq2seq_demo.py
src/nanite_tokenizers/tools/: download_tokenizer.py
src/nanite_tokenizers/training/: simplier.py
src/nanite_tokenizers/utils/: console.py  env.py  model_paths.py
sysml/: sysml_manager.py  sysml_model.py  sysml_parser.py
tests/: test_rag.py
web/: index.html
